--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "classnames": "^2.3.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^5.2.1",
