--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.1",
     "sass": "^1.43.3",
     "web-vitals": "^1.1.2"
