--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-big-calendar": "^0.38.1",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^5.2.1",
