--- a/package.json
+++ b/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "keycloak-js": "4.0.0-beta.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-big-calendar": "^0.38.1",
+    "react-bootstrap": "^2.1.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-numeric-input": "^2.2.3",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.1",
     "sass": "^1.43.3",
-    "web-vitals": "^1.1.2",
-    "keycloak-js": "4.0.0-beta.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
