--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "keycloak-js": "4.0.0-beta.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-big-calendar": "^0.38.1",
     "react-bootstrap": "^2.1.2",
+    "react-burger-menu": "^3.0.6",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-numeric-input": "^2.2.3",
+    "react-pro-sidebar": "^0.7.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
