--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "dompurify": "^2.3.6",
+    "draft-convert": "^2.1.12",
+    "draft-js": "^0.11.7",
+    "html-to-draftjs": "^1.5.0",
     "keycloak-js": "4.0.0-beta.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -23,6 +27,7 @@
     "react-burger-menu": "^3.0.6",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-numeric-input": "^2.2.3",
     "react-pro-sidebar": "^0.7.1",
