--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "html-to-draftjs": "^1.5.0",
+    "jquery": "^3.6.0",
     "keycloak-js": "4.0.0-beta.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
