--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.3.1",
     "react-numeric-input": "^2.2.3",
     "react-pro-sidebar": "^0.7.1",
+    "react-radio-buttons": "^1.2.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
