--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-animate-on-scroll": "^2.1.5",
     "react-big-calendar": "^0.38.1",
     "react-bootstrap": "^2.1.2",
     "react-burger-menu": "^3.0.6",
@@ -32,6 +31,7 @@
     "react-icons": "^4.3.1",
     "react-numeric-input": "^2.2.3",
     "react-pro-sidebar": "^0.7.1",
+    "react-quiz-component": "^0.3.9",
     "react-radio-buttons": "^1.2.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
